# python-project-83

./: .gitignore  Makefile  README.md  TODO.md  build.sh  database.sql  pyproject.toml  setup.cfg
page_analyzer/: __init__.py  app.py  database.sql  db_connection.py  db_context.py  parser.py  url_parser.py  url_repository.py  urls.py
page_analyzer/templates/: 404.html  500.html  index.html  layout.html  list.html  main.html  show.html
page_analyzer/templates/urls/: index.html  layout.html  show.html
tests/fixtures/: database.csv
